--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
     },
     "builds": [
         {
-          "src": "index.js",
+          "src": "backend/index.js",
           "use": "@vercel/node",
-          "config": { "includeFiles": ["index.js"] }
+          "config": { "includeFiles": ["backend/**"] }
         }
       ],
       "routes": [
         {
           "src": "/(.*)",
-          "dest": "index.js"
+          "dest": "backend/index.js"
         }
     ]   
 }
