--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "lanchee-api",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/index.js",
+  "main": "./backend/index.js",
   "scripts": {
-    "start": "node backend/index.js",
-    "dev": "nodemon backend/index.js",
+    "start": "node ./backend/index.js",
+    "dev": "nodemon ./backend/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,9 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^2.8.4",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.4.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
