--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
         {
           "src": "/(.*)",
           "dest": "backend/index.js"
-        }
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/restaurants"
+          }
     ]   
 }
