refatoring vercel.json router added

--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,12 @@
       ],
       "routes": [
         {
-          "src": "/(.*)",
+          "src": "/restaurants/(.*)",
           "dest": "backend/index.js"
         },
         {
             "src": "/(.*)",
-            "dest": "/restaurants"
+            "dest": "backend/index.js"
           }
     ]   
 }
