--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       ],
       "routes": [
         {
-          "src": "/restaurants/(.*)",
+          "src": "/(.*)",
           "dest": "backend/index.js"
         }
     ]   
